force-app/main/default/objects/Winners__c/Winners__c.object-meta.xml
<CustomObject>
    <description>Winners</description>
    <label>Winner</label>
    <nameField>
        <displayFormat>Winner-{0000}</displayFormat>
        <label>Winner</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Winners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>