force-app/main/default/objects/Winners__c/fields/Claimed__c.field-meta.xml
<CustomField>
    <fullName>Claimed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check when the gift item has been claimed by the winner</description>
    <inlineHelpText>Check when the gift item has been claimed by the winner</inlineHelpText>
    <label>Claimed</label>
    <type>Checkbox</type>
</CustomField>