force-app/main/default/objects/Winners__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <formula>TEXT(Session__r.SwagVoucher__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Item</label>
    <type>Text</type>
</CustomField>