force-app/main/default/objects/Winners__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Account__r.PersonContact.FirstName  &amp; &quot; &quot; &amp; Account__r.PersonContact.LastName</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>