force-app/main/default/objects/Winners__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Participant who Won</description>
    <inlineHelpText>Participant who Won</inlineHelpText>
    <label>Participant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Participant__c.Session__c</field>
            <operation>equals</operation>
            <valueField>$Source.Session__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Winners</relationshipLabel>
    <relationshipName>Winners</relationshipName>
    <type>Lookup</type>
</CustomField>