force-app/main/default/objects/Winners__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <description>Winner related to Session</description>
    <inlineHelpText>Winner related to Session</inlineHelpText>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Winners</relationshipLabel>
    <relationshipName>Winners</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>