force-app/main/default/objects/Winners__c/fields/Session_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Name__c</fullName>
    <formula>Session__r.Name</formula>
    <label>Session Name</label>
    <type>Text</type>
</CustomField>